--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -73,12 +73,27 @@
             <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
             <div class="col col-lg-10 col-md-10 col-sm-12 col-xs-12">
                 <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                    <a href="lista-categoria.aspx"> <img src="img/categoria.jpg" class="img-responsive" width="100%" alt=""></a>
+                   <a href="minhas-cotacoes.aspx"> <img src="img/listaCotacao.jpg" class="img-responsive listaCotacao" width="100%" alt=""></a>
                 </div>
                 <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
                 <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                    <a href="lista-fornecedor.aspx"> <img src="img/fornacedor.jpg" class="img-responsive fornecedor" width="100%" alt=""></a>
-                </div>                
+                    <a href="cadastro-cotacao.aspx"><img src="img/novaCotacao.jpg" class="img-responsive" width="100%" alt=""></a>
+                </div>
+                <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                   <a href="em-andamento.aspx"> <img src="img/semImagem.jpg" class="img-responsive" width="100%" alt=""></a>
+                </div>
+                <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                   <a href="liberar-pagamento.aspx"> <img src="img/liberaPagamento.jpg" class="img-responsive liberaPagamento" width="100%" alt=""></a>
+                </div> 
+                <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
+                 <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <a href="finalizado.aspx"><img src="img/semImagem.jpg" class="img-responsive finalizado" width="100%" alt=""></a>
+                </div>
+               
+               
+                <%--<div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <img src="img/perfil.jpg" class="img-responsive cadastrar" width="100%" alt="">
+                </div>--%>
             </div>
             <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
         </div>
