Fluxo validado Harry

--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BRIKK</title>
-    <link rel="icon" type="image/png" href="../img/favico.png" />    
+    <link rel="icon" type="image/png" href="../img/favico.png" />
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/default.css">
@@ -77,27 +77,27 @@
                 <div class="col col-lg-10 col-md-10 col-sm-12 col-xs-12">
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="minhas-cotacoes.aspx">
-                            <img src="img/listaCotacao.jpg" class="img-responsive listaCotacao" width="100%" alt=""></a>
+                            <img src="img/status/minhasCotacoes.jpeg" class="img-responsive" width="100%" /> </a>
                     </div>
                     <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="buscar-servico.aspx">
-                            <img src="img/novaCotacao.jpg" class="img-responsive" width="100%" alt=""></a>
+                            <img src="img/status/novaCotacao.jpg"  class="img-responsive" width="100%" /></a>
                     </div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="em-andamento.aspx">
-                            <img src="img/semImagem.jpg" class="img-responsive" width="100%" alt=""></a>
+                            <img src="img/status/emAndamento.jpeg"  class="img-responsive" width="100%" /></a>
                     </div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="liberar-pagamento.aspx">
-                            <img src="img/liberaPagamento.jpg" class="img-responsive liberaPagamento" width="100%" alt=""></a>
+                            <img src="img/status/liberaPagamento.jpg"  class="img-responsive" width="100%" /></a>
                     </div>
                     <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="finalizado.aspx">
-                            <img src="img/semImagem.jpg" class="img-responsive finalizado" width="100%" alt=""></a>
+                            <img src="img/status/finalizado.jpeg"  class="img-responsive" width="100%" /></a>
                     </div>
-                   
+
 
                     <%--<div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <img src="img/perfil.jpg" class="img-responsive cadastrar" width="100%" alt="">
@@ -138,7 +138,7 @@
                     "order": [[2, 'desc']],
                 });
 
-               
+
             });
         </script>
     </form>
