--- a/Bsk.Solution/Bsk.Site/Cliente/css/master.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/css/master.css
@@ -187,3 +187,7 @@ h3 {
 .mensagem {
     width: 60%;
 }
+.botaoPagamento {
+    border: none!important;
+    background: transparent!important;
+} 
