--- a/Bsk.Solution/Bsk.Site/Cliente/css/master.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/css/master.css
@@ -218,7 +218,21 @@ h3 {
     background: #e9e9e9;
 }
 
-    ::-webkit-scrollbar-thumb:hover {
-        background: #b8272c;
-        cursor: pointer;
-    }
+::-webkit-scrollbar-thumb:hover {
+    background: #b8272c;
+    cursor: pointer;
+}
+
+.tituloServico {
+    position: relative;
+    width: 100%;
+    float: left;
+    height: 60px;
+    bottom: 80px;
+    padding: 20px;
+    color: #fff;
+    background: #b8272c;
+    text-align: center;
+    box-shadow: 0px -1px 3px #909090;
+    margin-bottom: -60px;
+}
