--- a/Bsk.Solution/Bsk.Site/Cliente/css/master.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/css/master.css
@@ -211,17 +211,17 @@ h3 {
 }
 
 ::-webkit-scrollbar-track {
-    background: #fff;
+    background: #d8d8d8;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #e9e9e9;
+    background: #b8272c;
 }
 
-::-webkit-scrollbar-thumb:hover {
-    background: #b8272c;
-    cursor: pointer;
-}
+    ::-webkit-scrollbar-thumb:hover {
+        background: #750407;
+        cursor: pointer;
+    }
 
 .tituloServico {
     position: relative;
@@ -235,4 +235,9 @@ h3 {
     text-align: center;
     box-shadow: 0px -1px 3px #909090;
     margin-bottom: -60px;
+    transition: all ease 0.5s;
 }
+    .tituloServico:hover {
+        background: #750407;
+        transition: all ease 0.5s;
+    }
