--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -53,16 +53,26 @@
             <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12 text-center">
                 &nbsp;<a class="btn btn-brikk pull-right sair" title="SAIR" href="default.aspx"><i class="glyphicon glyphicon-log-out"></i>&nbsp;Sair</a>
                 <a href="perfil.aspx" class="pull-right link-brikk hidden-sm hidden-xs mr-20"><%
-                                                                                       var usuario = RetornaUsuario();
-                                                                                       Response.Write(usuario.Nome);
+                                                                                                  var usuario = RetornaUsuario();
+                                                                                                  Response.Write(usuario.Nome);
                 %>&nbsp;<i class="glyphicon glyphicon-user pull-right"></i></a>&nbsp;
                 
                 <a href="perfil.aspx" class="text-center link-brikk hidden-lg hidden-md">Olá Amiguinho</a>
-                
+
             </div>
 
         </div>
-
+        <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12">&nbsp;</div>
+        <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12 text-center">
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="minhas-cotacoes.aspx"><img src="img/status/minhasCotacoes.jpeg" class="img-responsive" width="100%" /></a></div> 
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="buscar-servico.aspx"><img src="img/status/novaCotacao.jpg" class="img-responsive" width="100%" /></a></div> 
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="em-andamento.aspx"><img src="img/status/emAndamento.jpeg" class="img-responsive" width="100%" /></a></div> 
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="liberar-pagamento.aspx"><img src="img/status/liberaPagamento.jpg" class="img-responsive" width="100%" /></a></div> 
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="finalizado.aspx"><img src="img/status/finalizado.jpeg" class="img-responsive" width="100%" /></a></div> 
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="perfil.aspx"><img src="img/status/perfil.jpg" class="img-responsive" width="100%" /></a></div> 
+            
+            
+        </div>
         <asp:ContentPlaceHolder ID="conteudo" runat="server">
         </asp:ContentPlaceHolder>
 
@@ -79,29 +89,26 @@
                 <div class="col col-lg-10 col-md-10 col-sm-12 col-xs-12">
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="minhas-cotacoes.aspx">
-                            <img src="img/status/minhasCotacoes.jpeg" class="img-responsive" width="100%" /> </a>
+                            <img src="img/status/minhasCotacoes.jpeg" class="img-responsive" width="100%" />
+                        </a>
                     </div>
                     <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="buscar-servico.aspx">
-                            <img src="img/status/novaCotacao.jpg"  class="img-responsive" width="100%" /></a>
+                            <img src="img/status/novaCotacao.jpg" class="img-responsive" width="100%" /></a>
                     </div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <a href="em-andamento.aspx">
-                            <img src="img/status/emAndamento.jpeg"  class="img-responsive" width="100%" /></a>
+                        <a href="em-andamento.aspx"><img src="img/status/emAndamento.jpeg" class="img-responsive" width="100%" /></a>
                     </div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <a href="liberar-pagamento.aspx">
-                            <img src="img/status/liberaPagamento.jpg"  class="img-responsive" width="100%" /></a>
+                        <a href="liberar-pagamento.aspx"><img src="img/status/liberaPagamento.jpg" class="img-responsive" width="100%" /></a>
                     </div>
                     <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <a href="finalizado.aspx">
-                            <img src="img/status/finalizado.jpeg"  class="img-responsive" width="100%" /></a>
+                        <a href="finalizado.aspx"><img src="img/status/finalizado.jpeg" class="img-responsive" width="100%" /></a>
                     </div>
-                   <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <a href="perfil.aspx">
-                            <img src="img/status/perfil.jpg"  class="img-responsive" width="100%" /></a>
+                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                        <a href="perfil.aspx"><img src="img/status/perfil.jpg" class="img-responsive" width="100%" /></a>
                     </div>
 
 
@@ -141,7 +148,7 @@
                     "language": {
                         "url": "//cdn.datatables.net/plug-ins/1.10.20/i18n/Portuguese-Brasil.json"
                     },
-                    "order": [[2, 'desc']],
+                    "order": [[3, 'desc']],
                 });
 
 
