--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -64,14 +64,23 @@
         </div>
         <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12">&nbsp;</div>
         <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12 text-center">
-            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="minhas-cotacoes.aspx"><img src="img/status/minhasCotacoes.jpeg" class="img-responsive" width="100%" /></a></div> 
-            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="buscar-servico.aspx"><img src="img/status/novaCotacao.jpg" class="img-responsive" width="100%" /></a></div> 
-            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="em-andamento.aspx"><img src="img/status/emAndamento.jpeg" class="img-responsive" width="100%" /></a></div> 
-            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="liberar-pagamento.aspx"><img src="img/status/liberaPagamento.jpg" class="img-responsive" width="100%" /></a></div> 
-            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="finalizado.aspx"><img src="img/status/finalizado.jpeg" class="img-responsive" width="100%" /></a></div> 
-            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="perfil.aspx"><img src="img/status/perfil.jpg" class="img-responsive" width="100%" /></a></div> 
-            
-            
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                <a href="#" onclick="carregaMinhasCotacoes();">
+                    <img src="img/status/minhasCotacoes.jpeg" class="img-responsive" width="100%" /></a>
+            </div>
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                <a href="#" onclick="carregaNovaCotacao();">
+                    <img src="img/status/novaCotacao.jpg" class="img-responsive" width="100%" /></a>
+            </div>
+            <%--<div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="em-andamento.aspx"><img src="img/status/emAndamento.jpeg" class="img-responsive" width="100%" /></a></div>--%>
+            <%--<div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="liberar-pagamento.aspx"><img src="img/status/liberaPagamento.jpg" class="img-responsive" width="100%" /></a></div>--%>
+            <%--<div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="finalizado.aspx"><img src="img/status/finalizado.jpeg" class="img-responsive" width="100%" /></a></div>--%>
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                <a href="#" onclick="carregaPerfil();">
+                    <img src="img/status/perfil.jpg" class="img-responsive" width="100%" /></a>
+            </div>
+
+
         </div>
         <asp:ContentPlaceHolder ID="conteudo" runat="server">
         </asp:ContentPlaceHolder>
@@ -88,27 +97,28 @@
                 <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
                 <div class="col col-lg-10 col-md-10 col-sm-12 col-xs-12">
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <a href="minhas-cotacoes.aspx">
+                        <a href="#" onclick="carregaMinhasCotacoes();">
                             <img src="img/status/minhasCotacoes.jpeg" class="img-responsive" width="100%" />
                         </a>
                     </div>
                     <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <a href="buscar-servico.aspx">
+                        <a href="#" onclick="carregaNovaCotacao();">
                             <img src="img/status/novaCotacao.jpg" class="img-responsive" width="100%" /></a>
                     </div>
-                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <%--  <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="em-andamento.aspx"><img src="img/status/emAndamento.jpeg" class="img-responsive" width="100%" /></a>
                     </div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="liberar-pagamento.aspx"><img src="img/status/liberaPagamento.jpg" class="img-responsive" width="100%" /></a>
-                    </div>
-                    <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
+                    </div>--%>
+                    <%-- <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="finalizado.aspx"><img src="img/status/finalizado.jpeg" class="img-responsive" width="100%" /></a>
-                    </div>
+                    </div>--%>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <a href="perfil.aspx"><img src="img/status/perfil.jpg" class="img-responsive" width="100%" /></a>
+                        <a href="#" onclick="carregaPerfil();">
+                            <img src="img/status/perfil.jpg" class="img-responsive" width="100%" /></a>
                     </div>
 
 
@@ -150,12 +160,61 @@
                     },
                     "order": [[3, 'desc']],
                 });
-
-
             });
+
+            function carregaMinhasCotacoes() {
+                var url = window.location.href;
+
+                if (url.includes("cadastro-cotacao.aspx")) {
+                    salvarCotacaoLink("minhas-cotacoes.aspx");
+                } else {
+                    window.location.href = "minhas-cotacoes.aspx";
+                }
+            }
+
+            function carregaNovaCotacao() {
+                var url = window.location.href;
+                if (url.includes("cadastro-cotacao.aspx")) {
+                    salvarCotacaoLink("buscar-servico.aspx");
+                }
+                else {
+                    window.location.href = "buscar-servico.aspx";
+                }
+            }
+
+            function carregaPerfil() {
+                var url = window.location.href;
+                if (url.includes("cadastro-cotacao.aspx")) {
+                    salvarCotacaoLink('perfil.aspx');
+                }
+                else {
+                    window.location.href = "perfil.aspx";
+                }
+            }
+
+            function salvarCotacaoLink(valor) {
+                Swal.fire({
+                    title: 'Salvar?',
+                    text: "Cuidado, ao sair dessa página você vai perder todo conteúdo não salvo",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Salvar e sair',
+                    cancelButtonText: 'Sair sem salvar'
+                }).then((result) => {
+                    if (result.value) {
+                        document.getElementById("hdLink").value = valor;
+                        $("#btnSalvar").click();
+
+                    } else {
+                        window.location.href = valor;
+                    }
+                })
+            }
         </script>
     </form>
-
+    <script type="text/javascript" id="lzdefsc" src="//brikk.areadecompras.com.br/suporte/script.php?id=lzdefsc" defer></script>
 </body>
 </html>
 
