--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -66,6 +66,11 @@
         <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12 text-center">
             <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12">
                 <a href="#" onclick="carregaMinhasCotacoes();">
+                    <img src="img/voltar.png" class="img-responsive" width="100%" />
+                </a>
+            </div>
+            <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                <a href="#" onclick="carregaMinhasCotacoes();">
                     <img src="img/status/minhasCotacoes.jpeg" class="img-responsive" width="100%" /></a>
             </div>
             <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12">
@@ -96,6 +101,11 @@
                 <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
                 <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
                 <div class="col col-lg-10 col-md-10 col-sm-12 col-xs-12">
+                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                        <a href="#" onclick="carregaMinhasCotacoes();">
+                            <img src="../img/voltar.png" class="img-responsive" width="100%" />
+                        </a>
+                    </div>
                     <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <a href="#" onclick="carregaMinhasCotacoes();">
                             <img src="img/status/minhasCotacoes.jpeg" class="img-responsive" width="100%" />
@@ -214,7 +224,20 @@
             }
         </script>
     </form>
-    <script type="text/javascript" id="lzdefsc" src="//brikk.areadecompras.com.br/suporte/script.php?id=lzdefsc" defer></script>
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5f5a9b264704467e89edf3c3/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 </html>
 
