--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -326,28 +326,28 @@ div#tabela_paginate span a {
             </a>
             <ul class="menu-dash">
                 <li>
-                    <a href="cliente-dashboard.aspx">
+                    <a href="cliente-dashboard.aspx" class="dash">
                         <img src="../assets/imagens/dashboard.svg" style="width: 20px;" alt="ícone">
                         <span>Dashboard</span>
                     </a>
                 </li>
-                <li><a href="builts.html">
+                <li><a href="builts.html" class="asbuilt">
                     <img src="../assets/imagens/oportunidades.svg" style="width: 20px;" alt="ícone"><span>As Built</span></a>
                 </li>
-                <li><a href="manutencao.html">
+                <li><a href="manutencao.html" class="plano_manutencao">
                     <img src="../assets/imagens/meubrikk.svg" style="width: 20px;" alt="ícone"><span>Plano
                   Manutenção</span></a>
                 </li>
-                <li><a href="minhas-cotacoes.aspx" class="dash-ativo">
+                <li><a href="minhas-cotacoes.aspx" class="cotacao">
                     <img src="../assets/imagens/cotacao.svg" style="width: 20px;" alt="ícone"><span>Cotações</span></a>
                 </li>
-                <li><a href="em-andamento.aspx">
+                <li><a href="em-andamento.aspx" class="andamento">
                     <img src="../assets/imagens/andamento.svg" style="width: 20px;" alt="ícone"><span>Em Andamento</span></a>
                 </li>
-                <li><a href="financeiro.html">
+                <li><a href="financeiro.html" class="financeiro">
                     <img src="../assets/imagens/financeiro.svg" style="width: 20px;" alt="ícone"><span>Financeiro</span></a>
                 </li>
-                <li><a href="documentacao.html">
+                <li><a href="documentacao.html" class="documentacao">
                     <img src="../assets/imagens/documentacao.svg" style="width: 20px;"
                         alt="ícone"><span>Documentação</span></a>
                 </li>
