--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -372,28 +372,28 @@ a.btn.btn-brikk.mensagem {
                 <a class="open-menu">< </a>
                 <ul class="menu-dash">
                     <li>
-                        <a href="dashboard.aspx">
+                        <a href="dashboard.aspx" class="dash">
                             <img src="../assets/imagens/dashboard.svg" style="width: 20px;" alt="ícone">
                             <span>Dashboard</span>
                         </a>
                     </li>
-                    <li><a href="minhas-cotacoes.aspx" class="dash-ativo">
+                    <li><a href="minhas-cotacoes.aspx" class="cotacao">
                         <img src="../assets/imagens/cotacao.svg" style="width: 20px;" alt="ícone"><span>Cotações</span></a>
                     </li>
-                    <li><a href="em-andamento.aspx">
+                    <li><a href="em-andamento.aspx" class="andamento">
                         <img src="../assets/imagens/andamento.svg" style="width: 20px;" alt="ícone"><span>Em Andamento</span></a>
                     </li>
-                    <li><a href="#">
+                    <li><a href="#" class="financeiro">
                         <img src="../assets/imagens/financeiro.svg" style="width: 20px;" alt="ícone"><span>Financeiro</span></a>
                     </li>
-                    <li><a href="#">
+                    <li><a href="#" class="documentacao">
                         <img src="../assets/imagens/documentacao.svg" style="width: 20px;"
                             alt="ícone"><span>Documentação</span></a>
                     </li>
-                    <li><a href="#">
+                    <li><a href="#" class="meu_brick">
                         <img src="../assets/imagens/meubrikk.svg" style="width: 20px;" alt="ícone"><span>Meu Brikk</span></a>
                     </li>
-                    <li><a href="#">
+                    <li><a href="#" class="oportunidades">
                         <img src="../assets/imagens/oportunidades.svg" style="width: 20px;"
                             alt="ícone"><span>Oportunidades</span></a>
                     </li>
@@ -451,6 +451,8 @@ a.btn.btn-brikk.mensagem {
         </script>
 
         <script async src="../assets/js/script.js"></script>
+
+        
 
         <script>
 
